[project]
name = "roadflow-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py312"
# Show all violations as errors (not warnings)
output-format = "full"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "I",   # isort
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
]

# All selected rules are treated as errors by default in ruff
# Use --exit-non-zero-on-fix to ensure CI fails on unfixable issues

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["models", "repository", "services", "utils", "routes", "helpers", "middleware"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.13",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

